package com.demo;

/**
 * @author liucui
 */
public interface FlyBehavior {
    public void fly();
}
