package com.demo;

/**
 * @author liucui
 */
public interface QuackBehavior {
    public void quack();
}
